Added new comentaries step 2

--- a/config.yaml
+++ b/config.yaml
@@ -29,6 +29,7 @@ params:
   ShowBreadCrumbs: true
   ShowCodeCopyButtons: true
   ShowWordCount: true
+  comments: true
   ShowToc: false
   hideFooter: false
   hideSummary: false
