--- a/config.yaml
+++ b/config.yaml
@@ -38,6 +38,8 @@ params:
   assets:
     customCSS: ["/css/extended/theme-vars-override.css"]
     externalLinksInNewTab: true
+    umamiWebsiteId: "850ad737-be57-4c23-8b0e-1b00b00a3aa7"  # ← вставь сюда ID сайта из Umami
+    umamiScriptUrl: "https://analytics.umami.is/script.js"
 
   homeInfoParams:
     Title: '<code>[~] blog$<span class="cursor"></span></code>'
